gccida/g1/purge_single_hard_subreg_set
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_single_hard_subreg_set/src/function.c:3966:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v3; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_single_hard_subreg_set/src/function.c:3972:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v2.rtwint = ( __int64)pattern->fld[0]; 
                      ^~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_single_hard_subreg_set/src/function.c:3985:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( v5 + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_single_hard_subreg_set/src/function.c:3987:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( v2.rtwint + 2)); 
  ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_single_hard_subreg_set/src/obj/function.o] Error 1
